# BobTimes

./: .env.development  .gitignore  CLAUDE.md  LAB_05_TAVILY_MCP_INTEGRATION.md  README.md  generate_newpaper.py  justfile  opencode.json  package-lock.json  pyproject.toml  pyrightconfig.json  ruff.toml  run-partial-tests.sh  run-regression-tests.sh  run-tests.sh
.augment/: mcp-config.json
.augment/rules/: always.md
.claude/: settings.json  settings.local.json
.devcontainer/: devcontainer.json
.github/instructions/: copilot-instructions.md
agent_examples/: README.md  index.html  memory_agent.py  weather_agent.py
agent_examples/memory_data/: demo_user_index.faiss  demo_user_memories.json
backend/: Dockerfile  pyproject.toml  run_news_cycle.py
backend/app/: __init__.py  dependencies.py  main.py
backend/app/api/: news.py
backend/app/commands/: db_commands.py
backend/app/dao/: content_dao.py
backend/app/middleware/: logging_middleware.py
backend/app/models/: content_models.py  newspaper_models.py
backend/app/routers/: __init__.py  content.py  dev.py
backend/app/services/: content_service.py  newspaper_service.py
client/: .env.development  .env.development.example  .env.production  Dockerfile  MIGRATION_TO_BACKEND_API.md  PLAYWRIGHT_VSCODE_SETUP.md  index.html  package-lock.json  package.json  vite.config.ts
client/public/: index.html  manifest.json
client/src/: App.tsx
client/src/components/: NewspaperTest.tsx  SelaLogo.tsx  StoryImage.tsx
client/src/components/layout/: Footer.tsx  Header.tsx  Layout.tsx
client/src/components/pages/: ArticlePage.tsx  EconomicsPage.tsx  EntertainmentPage.tsx  HomePage.tsx  NewsPage.tsx  PoliticsPage.tsx  SciencePage.tsx  SportsPage.tsx  TechPage.tsx
client/src/components/ui/: ArticleCard.tsx  ArticleList.tsx  logo.tsx
client/src/contexts/: NewspaperContext.tsx
client/src/hooks/: useContent.ts  useNewspaperContent.ts
client/src/lib/: api.ts  config.ts
client/src/services/: contentApi.ts
client/src/types/: content.ts  news.ts
client/src/utils/: imageUtils.ts
data/topics/: covered_topics.json
docs/: LAB_01_GETTING_STARTED.md  LAB_02_YOUTUBE_INTEGRATION.md  LAB_03_CONTENT_IMPROVEMENT.md  LAB_04_RESEARCHER_AGENT.md  LAB_05_TAVILY_MCP_INTEGRATION.md  LAB_06_MCP_SERVER.md
libs/: .env.development  .env.example  .env.production  secrets.example.yaml
libs/common/: .gitignore  __init__.py  pyproject.toml
libs/common/agents/: __init__.py  agent.py  agent_factory.py  editor_agent.py  image_processor.py  reporter_agent.py  shared_memory_store.py  task_execution_service.py  task_executor_protocol.py  types.py
libs/common/agents/editor_agent/: __init__.py  editor_agent_main.py  editor_executor.py  editor_models.py  editor_state.py  editor_tools.py  image_tool.py
libs/common/agents/models/: __init__.py  cycle_models.py  performance_models.py  search_models.py  story_models.py  submission_models.py  task_models.py  topic_models.py
libs/common/agents/reporter_agent/: __init__.py  reporter_agent_main.py  reporter_executor.py  reporter_models.py  reporter_prompt.py  reporter_state.py  reporter_tools.py
libs/common/agents/researcher_agent/: __init__.py  research_e2e.py  researcher_agent_main.py  researcher_executor.py  researcher_models.py  researcher_prompt.py  researcher_state.py  researcher_tools.py
libs/common/agents/tools/: __init__.py  base_tool.py
libs/common/commands/: db_commands.py
libs/common/core/: __init__.py  config_service.py  exceptions.py  llm_service.py  logging_service.py
libs/common/examples/: duckduckgo_search_example.py
libs/common/mcp/: tavily_mcp_client.py
libs/common/mcp_clients/: __init__.py  smoke_test_tavily.py  tavily_mcp_client.py
libs/common/utils/: __init__.py  duckduckgo_search_tool.py  image_utils.py  playwright_scraper.py  topic_memory_models.py  topic_memory_service.py  username_utils.py  youtube_models.py  youtube_service.py  youtube_tool.py
libs/data/: pyproject.toml
libs/shared_db/: alembic.ini  pyproject.toml
libs/shared_db/alembic/: env.py
libs/shared_db/shared_db/: __init__.py
libs/shared_db/shared_db/crud/: __init__.py  base.py
libs/shared_db/shared_db/db/: __init__.py  create_database.py  init_db.py  run_migrations.py
libs/shared_db/shared_db/models/: __init__.py  content.py
libs/shared_db/shared_db/schemas/: __init__.py
mcp_demo/: .gitignore  README.md  client.py  hello.py  index.html  llm_agents_guide.html  main.py  pyproject.toml  secrets_example.yaml
scripts/: setup-devcontainer.sh
strands_examples/: mcp_agent.py  multi_agent.py
strands_examples/repl_state/: repl_state.pkl
tests/: test_no_api_quota.py  test_youtube_integration.py  test_youtube_reporter.py  test_youtube_transcript_only.py
