[project]
name = "bobtimes_monorepo"
description = "BobTimes Monorepo"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "common",
    "backend",
    "litellm>=1.75.8",
    "boto3>=1.40.14",
    "tenacity>=9.1.2",
]

[tool.uv.sources]
common = { workspace = true }
backend = { workspace = true }

[tool.uv.workspace]
members = ["libs/*/", "backend"]

[tool.uv]
package = false
cache-dir = ".cache"
dev-dependencies = [
    "ruff>=0.12.7",
    "pyright>=1.1.403",
    "pre-commit>=4.2.0",
    "httpx>=0.28.1"
]



[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

[dependency-groups]
dev = []
