[project]
name = "backend"
description = "BobTimes Backend API"
requires-python = ">=3.13"
version = "0.1.0"
dependencies = [
    "common",
    "fastapi[standard]>=0.116.1",
    "uvicorn>=0.35.0",
    "python-multipart>=0.0.17",
]

[project.scripts]
app = "app.main:app"



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]