[project]
name = "common"
description = "Common utilities and shared components"
requires-python = ">=3.13"
version = "0.1.0"
dependencies = [
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.3",
    "pyyaml>=6.0.2",
    "typer>=0.15.1",
    "requests>=2.32.3",
    "litellm>=1.75.8",
    "boto3>=1.40.16",
    "ddgs>=6.3.5",
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.13.5",
    "readability-lxml>=0.8.4.1",
    "playwright>=1.54.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "core", "utils", "commands", "data"]
